Fix styling if word is too large

--- a/voby/src/app/set/set.component.scss
+++ b/voby/src/app/set/set.component.scss
@@ -28,6 +28,10 @@
 
     & .word {
         margin: 0;
+        width: 400px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     & .plural {
@@ -35,6 +39,9 @@
         font-weight: 300;
         padding: 0;
         margin: 0;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     & p {
